@@ -1,3 +1,8 @@
+2006-05-31  Edward Hervey  <edward@fluendo.com>
+
+	* gnl/gnlsource.c: (gnl_source_prepare):
+	initial seek event is in object time realm.
+
 2006-05-23  Edward Hervey  <edward@fluendo.com>
 
 	* gnl/gnlcomposition.c: (gnl_composition_dispose),
